fixed issue with spacing of categories in index view.

--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -8,14 +8,14 @@
 // }
 
 .categories {
-margin-top: 10%;
+margin-top: 5%;
 }
-
+//
 .text-center {
-width: 200px;
-height: 200px;
+height: auto;
+margin-bottom: 15%;
 }
-
+//
 h4 a {
   border: 2pt solid #F5B19A;
   border-radius: 25px;
@@ -23,7 +23,7 @@ h4 a {
   color: white;
   font-family: 'Anton', sans-serif;
   font-size: 2em;
-  padding: 20% ;
+  padding: 5% ;
   // max-width: 200px;
 }
 
